signup and login complete

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.datasource.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialec
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa-show-sql=true
 
+spring.mail.host=smtp.example.com
+spring.mail.port=587
+spring.mail.username=shekhawatsingharjun12345@gmail.com
+spring.mail.password=Arjun@2804
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
