--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,10 @@ spring.datasource.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialec
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa-show-sql=true
 
+stripe.api.key = stripe-key
+razorpay.api.key =rzp_test_BbLwkBVuQvM5Zt
+razorpay.api.secret =KFtSHEnlNO3BddjweGF6UsNl
+
 spring.mail.host=smtp.example.com
 spring.mail.port=587
 spring.mail.username=shekhawatsingharjun12345@gmail.com
